# FSC

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
dataset/opencv_sample/: stereoCalibration.npz
dataset/opencv_sample/left/: calibration.json  calibration.npz
dataset/opencv_sample/right/: calibration.json  calibration.npz
dataset/our_dataset/calibration/left/: calibration.json  calibration.npz
dataset/our_dataset/calibration/right/: calibration.json  calibration.npz
dataset/our_dataset/calibration2/: stereoCalibration.npz
dataset/our_dataset/calibration2/left/: calibration.npz
dataset/our_dataset/calibration2/right/: calibration.npz
dataset/our_dataset/calibration3/: stereoCalibration.npz
dataset/our_dataset/calibration3/left/: calibration.npz
dataset/our_dataset/calibration3/right/: calibration.npz
dataset/our_dataset/calibration_old/left_camera/: 1731849714.9859977.ppng  calibration.json
dataset/our_dataset/calibration_old/right_camera/: calibration.json
models/: coco.names
models/tools/: pytorch_to_onnx.py  test_onnx.py
src/: calculation.cpp  calculation.hpp  calibrate.py  downloadDataset.py  download_dataset.py  frameProcessing.cpp  frameProcessing.hpp  getImages.py  ipc.cpp  ipc.hpp  listPorts.py  main.cpp  main.py  model.py  objectDetection.cpp  training.py
src/camera/: depth_estimation.py  stereo.py  utils.py  video_stream.py
src/detection/: enums.py  listener.py  main.py  utils.py
src/detector/: Detector.py  detector.py
test/camera/: test_depth_estimation.py
